--- a/frontend/src/styles/JobPortal.css
+++ b/frontend/src/styles/JobPortal.css
@@ -9,7 +9,8 @@ body {
   /* Header */
   .jobportal h1 {
     text-align: center;
-    color: #333;
+    color: #f1710f;
+    text-shadow:3px 1px 1px rgb(255, 255, 255);
     padding: 30px 0;
     font-size: 2.5em;
     margin: 0;
